# cerebro

./: .env.example  .gitignore  ELECTRON_PLAN.md  README.md  cerebro.spec  pyproject.toml
.github/workflows/: ci.yml
build_scripts/: entry.py
examples/: 3b1b_neural_nets.opml  course.xmind  course_v2.xmind  course_with_failure.opml  demo.xmind  embedded_subs_demo.mkv  embedded_subs_demo.opml  gemini_expert.xmind  groq_expert.xmind  groq_expert_v2.xmind  groq_full.opml  intro_to_neural_networks.opml  intro_to_neural_networks.vtt  photosynthesis_lesson.mkv  photosynthesis_lesson.opml
examples/course/: 01_neural_network_basics.vtt  02_convolutional_networks.vtt
examples/course_with_failure/: lesson1.txt
examples/xmind_theme_template/: DEFAULT_MAP_TEMPLATE.xmind  README.md  TREE_MAP_TEMPLATE.xmind
tests/: test_anchors.py  test_article.py  test_audio.py  test_batch.py  test_cache.py  test_captions.py  test_cli_dashboard.py  test_cli_edit.py  test_cli_estimate_llm_calls.py  test_cli_quota.py  test_cli_runner.py  test_cli_structure_fallback.py  test_cli_wizard.py  test_clipboard.py  test_console.py  test_convert_util.py  test_doctor.py  test_document_structurer.py  test_editor.py  test_enumerated_structuring.py  test_enumeration.py  test_env_file.py  test_export.py  test_folder.py  test_foldermap.py  test_fsutil.py  test_heuristic.py  test_ir.py  test_llm_base.py  test_llm_batching.py  test_llm_config.py  test_llm_structurer.py  test_manifest.py  test_markdown.py  test_merge.py  test_opml.py  test_pacing.py  test_paths.py  test_paths_config.py  test_pdf.py  (+11 more)
(+49 files in other folders)
