[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cerebro"
version = "0.1.0"
description = "Turn video, audio, and PDF content into XMind-compatible smart mind maps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "youtube-transcript-api>=0.6.2",
  "yt-dlp>=2024.1.0",
  "requests>=2.31",
  "questionary>=2.0",
  "pathspec>=0.11",
  "pymupdf>=1.24",
  "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
whisper = ["faster-whisper>=1.0"]

[project.scripts]
cerebro = "cerebro.cli:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
